--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -265,10 +265,9 @@
 	journal      = {{Data in Brief}},
 	volume       = 53,
 	pages        = 110198,
-	doi          = {https://doi.org/10.1016/j.dib.2024.110198},
+	doi          = {10.1016/j.dib.2024.110198},
 	issn         = {2352-3409},
 	url          = {https://www.sciencedirect.com/science/article/pii/S2352340924001690},
-	keywords     = {Built-up change, Climate change, Migration, Land degradation, Drought, Jordan}
+	keywords     = {Built-up change, Climate change, Migration, Land degradation, Drought, Jordan},
+	abstract     = {The Levant is highly vulnerable to climate change and experiences prolonged heat waves that have led to societal crises and population displacement. In addition, the region has been impacted by further socio-political turmoil at least since 2010, including the Syrian civil war and currently the escalation of the so-called Israeli-Palestinian Conflict, which strained neighbouring countries like Jordan due to the influx of Syrian refugees and increases population vulnerability to governmental decision-making. Jordan, in particular, has seen rapid population growth and significant changes in land-use and infrastructure, leading to over-exploitation of the landscape through irrigation and unregulated construction activity. This article uses climate data, satellite imagery, and land cover information in a multicomponent trend analysis to illustrate the substantial increase in construction activity and to highlight the intricate relationship between climate change predictions and current socio-political development in the Levant. The analyses were performed using annual and seasonal composites of MODIS (Moderate Resolution Imaging Spectroradiometer) NDVI (Normalized Difference Vegetation Index) datasets with a spatial resolution of 250 m compared to climate indices of the GLDAS (Global Land Data Assimilation System) Noah Land Surface Model L4 dataset for the period 2001-2023. Surface reflectance and climatic parameters were then evaluated on the basis of socio-cultural factors, such as population dynamics, governmental decision-making, water withdrawal regulations, and built-up change as a result of large-scale migration processes. All analyses were conducted using R-software and can be reproduced and replicated using the code and the data provided in this article and the repository.}
 }
-
-
