Leave only citations with DOI/ID

--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -10,18 +10,6 @@
 	pages        = {1--29},
 	doi          = {10.1371/journal.pone.0286036},
 	url          = {https://doi.org/10.1371/journal.pone.0286036},
-	abstract     = {Antarctic krill (Euphausia superba) is a key species of the Southern Ocean, impacted by climate change and human exploitation. Understanding how these changes affect the distribution and abundance of krill is crucial for generating projections of change for Southern Ocean ecosystems. Krill growth is an important indicator of habitat suitability and a series of models have been developed and used to examine krill growth potential at different spatial and temporal scales. The available models have been developed using a range of empirical and mechanistic approaches, providing alternative perspectives and comparative analyses of the key processes influencing krill growth. Here we undertake an intercomparison of a suite of the available models to understand their sensitivities to major driving variables. This illustrates that the results are strongly determined by the model structure and technical characteristics, and the data on which they were developed and validated. Our results emphasize the importance of assessing the constraints and requirements of individual krill growth models to ensure their appropriate application. The study also demonstrates the value of the development of alternative modelling approaches to identify key processes affecting the dynamics of krill. Of critical importance for modelling the growth of krill is appropriately assessing and accounting for differences in estimates of food availability resulting from alternative methods of observation. We suggest that an intercomparison approach is particularly valuable in the development and application of models for the assessment of krill growth potential at circumpolar scales and for future projections. As another result of the intercomparison, the implementations of the models used in this study are now publicly available for future use and analyses.}
-}
-@misc{becker_spatial_2023,
-	title        = {Spatial Data in the {mlr3} Ecosystem},
-	author       = {Becker, Marc},
-	year         = 2023,
-	month        = feb,
-	journal      = {{mlr3}: Machine Learning in {R}},
-	url          = {https://mlr-org.com/gallery/technical/2023-02-27-land-cover-classification/index.html},
-	urldate      = {2023-07-17},
-	abstract     = {Run a land cover classification of the city of Leipzig.},
-	language     = {en}
 }
 @phdthesis{chavez_sonoran_2023,
 	title        = {Sonoran {Desert} {Ex} {Situ} {Conservation} {Gap} {Analysis}: {Charting} the {Path} {Toward} {Conservation}.},
@@ -35,16 +23,6 @@
 	school       = {{Queen Mary, University of London}},
 	keywords     = {FOS: Biological sciences}
 }
-@book{desaix_2023,
-	title        = {Migratory Networks in {R}},
-	author       = {DeSaix, Matt},
-	year         = 2023,
-	month        = aug,
-	publisher    = {Online},
-	url          = {https://mgdesaix.github.io/connectivity-book/},
-	urldate      = {2023-09-01},
-	language     = {en}
-}
 @article{gibson_targeted_2023,
 	title        = {Targeted sampling of {Toxolasma} parvum ({Lilliput}) in southwestern {Ontario}, 2022},
 	author       = {Gibson, Mandy P.},
@@ -55,38 +33,9 @@
 	number       = 1369,
 	isbn         = 9780660477961,
 	note         = {OCLC: 1405850670},
-	abstract     = {"Toxolasma parvum (Lilliput) is currently listed as Endangered under the federal Species at Risk Act (SARA). At the time of its previous assessment by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), only 39 live collections of T. parvum had ever been found in Canada. We hypothesized that the low detection of T. parvum may be the result of a failure to target preferred habitat types of this species in Canada. In 2022, Fisheries and Oceans Canada (DFO) initiated a sampling program to target Lilliput preferred habitats by sampling 28 sites in the Lake St. Clair watershed, 5 sites in the Lake Erie watershed, and 2 sites in the Lake Ontario watershed"--Abstract.},
 	language     = {eng},
 	collaborator = {{Canada.}},
 	keywords     = {Toxolasma parvum Sampling Ontario}
-}
-@misc{hernangomez_introducing_2022,
-	title        = {Introducing {tidyterra}},
-	author       = {Hernangómez, Diego},
-	year         = 2022,
-	month        = may,
-	journal      = {{One world: Projects, maps and coding}},
-	url          = {https://dieghernan.github.io/202205_tidyterra/},
-	urldate      = {2023-07-17},
-	abstract     = {Easily work and ggplot SpatRasters - tidyterra provides tidyverse methods for terra objects and geom functions for plotting with ggplot2....},
-	language     = {en-US}
-}
-@book{hufkens_handful_2023,
-	title        = {A {Handful} of {Pixels}},
-	author       = {Hufkens, Koen},
-	year         = 2023,
-	month        = mar,
-	publisher    = {Online},
-	url          = {https://khufkens.github.io/handful_of_pixels/},
-	urldate      = {2023-07-17},
-	language     = {en}
-}
-@misc{isken2023,
-	title        = {{Hello world maps in R using both raster and vector data}},
-	author       = {Mark Isken},
-	url          = {https://bitsofanalytics.org/posts/hello_world_mapping_r/hello_world_map_r.html},
-	date         = {2023-04-03},
-	langid       = {en}
 }
 @article{Lacko2023,
 	title        = {{RCzechia}: Spatial Objects of the {Czech} {Republic}},
@@ -111,16 +60,6 @@
 	elocation-id = {2023.07.24.550358},
 	eprint       = {https://www.biorxiv.org/content/early/2023/07/26/2023.07.24.550358.full.pdf}
 }
-@misc{massicotte_how_2022,
-	title        = {How to read {AMSR2} sea ice data with {terra}},
-	author       = {Massicotte, Philippe},
-	year         = 2022,
-	month        = aug,
-	url          = {https://www.pmassicotte.com/posts/2022-08-11-how-to-read-amsr2-seaice-data/},
-	urldate      = {2023-07-17},
-	language     = {en},
-	journak      = {{Philippe Massicotte}}
-}
 @article{meister2023,
 	title        = {Blue mussels in western Norway have vanished where in reach of crawling predators},
 	author       = {Nadja Meister and Tom J. Langbehn and  Øystein Varpe and Christian Jørgensen},
@@ -133,15 +72,6 @@
 	url          = {http://dx.doi.org/10.3354/meps14416},
 	date         = {2023-10-19},
 	langid       = {en}
-}
-@misc{molitor_introducing_2022,
-	title        = {Introducing tidal flat habitat},
-	author       = {Molitor, Cullen},
-	year         = 2022,
-	month        = sep,
-	journal      = {{Ocean Health Index}},
-	url          = {https://oceanhealthindex.org/news/tidal_flats/},
-	urldate      = {2023-07-17}
 }
 @book{moraga_spatial_2023,
 	title        = {Spatial {Statistics} for {Data} {Science}: {Theory} and {Practice} with {R}},
@@ -157,82 +87,6 @@
 	urldate      = {2023-11-28},
 	edition      = 1,
 	language     = {en}
-}
-@misc{popovic_population_2023,
-	title        = {How to map population Change with {GHSL} Data in {R}},
-	author       = {Popovic, Milos},
-	year         = 2023,
-	month        = nov,
-	journal      = {{Milos Popovic}},
-	url          = {https://milospopovic.net/map-population-change-in-r/},
-	urldate      = {2023-11-25},
-	abstract     = {In this tutorial, I will show you how to use R and some awesome packages to download, load, crop, and calculate population difference from the Global Human Settlement Layer (GHSL) data, and how to visualize the results using ggplot2 and tidyterra.},
-	language     = {en-us}
-}
-@misc{popovich_animated_2023,
-	title        = {Animated raster maps with {ggplot2} and {gifski} in {R}},
-	author       = {Popovic, Milos},
-	year         = 2023,
-	month        = jul,
-	journal      = {{Youtube}},
-	url          = {https://youtube.com/watch?v=GMnuNjnXnS8},
-	urldate      = {2023-07-17},
-	language     = {en}
-}
-@misc{roye_hillshade_2022,
-	title        = {Hillshade effects},
-	author       = {Royé, Dominic},
-	year         = 2022,
-	month        = jul,
-	journal      = {{Dr. Dominic Royé}},
-	url          = {https://dominicroye.github.io/en/2022/hillshade-effects/},
-	urldate      = {2023-07-17},
-	abstract     = {It is very common to see relief maps with shadow effects, also known as 'hillshade', which generates visual depth. How can we create these effects in R and how to include them in ggplot2?},
-	language     = {en-us}
-}
-@misc{schramm2022plotting,
-	title        = {{@mpschramm}: Plotting drought conditions},
-	author       = {Schramm, Michael},
-	year         = 2022,
-	url          = {https://michaelpaulschramm.com/posts/2022-07-22-drought/}
-}
-@misc{semba_compute_2023,
-	title        = {Compute Normalized Difference Vegetation Index in {R}},
-	author       = {Semba, Masumbuko},
-	year         = 2023,
-	month        = apr,
-	journal      = {{ng'ara}},
-	url          = {https://lugoga.github.io/semba-quarto/posts/ndvi/},
-	urldate      = {2023-07-17},
-	language     = {en}
-}
-@misc{semba_getting_2023,
-	title        = {Getting {GEBCO} Bathymetry Data and glean the power of {terra} and {tidyterra} packages for raster and vector objects},
-	author       = {Semba, Masumbuko},
-	year         = 2023,
-	month        = mar,
-	journal      = {{ng'ara}},
-	url          = {https://lugoga.github.io/semba-quarto/posts/gebco/},
-	urldate      = {2023-07-17},
-	language     = {en}
-}
-@misc{sepulveda_2023,
-	title        = {Exploring {Santiago} de {Chile}: Hillshade and hypsometric map with {tidyterra} and {ragg}},
-	author       = {Ignacio Sepulveda},
-	year         = 2023,
-	month        = aug,
-	journal      = {medium.com},
-	url          = {https://medium.com/@ignaciodsg/exploring-santiago-de-chile-hillshade-and-hypsometric-map-with-tidyterra-and-ragg-6929a6c7143},
-	urldate      = {2023-08-03}
-}
-@misc{mahoney_cloud_2023,
-	title        = {Cloud-Native Geospatial If You Don't Speak Snake},
-	author       = {Mike Mahoney},
-	year         = 2023,
-	month        = sep,
-	journal      = {{Cloud-Native Geospatial Foundation}},
-	url          = {https://cloudnativegeo.org/blog/2023/09/cloud-native-geospatial-if-you-dont-speak-snake/},
-	urldate      = {2024-01-22}
 }
 @manual{R-nasaacces,
 	title        = {{NASAaccess}: Downloading and Reformatting Tool for {NASA} Earth Observation Data Products},
@@ -256,7 +110,6 @@
 	doi          = {10.1038/s44183-023-00040-8},
 	issn         = {2731-426X},
 	url          = {https://doi.org/10.1038/s44183-023-00040-8},
-	abstract     = {Nations have committed to reductions in the global rate of species extinctions through the Sustainable Development Goals 14 and 15, for ocean and terrestrial species, respectively. Biodiversity loss is worsening despite rapid growth in the number and extent of protected areas, both at sea and on land. Resolving this requires targeting the locations and actions that will deliver positive conservation outcomes for biodiversity. The Species Threat Abatement and Restoration (STAR) metric, developed by a consortium of experts, quantifies the contributions that abating threats and restoring habitats in specific places offer towards reducing extinction risk based on the IUCN Red List of Threatened SpeciesTM. STAR is now recommended as an appropriate metric by recent disclosure frameworks for companies to report their impacts on nature and STAR has seen widespread uptake within the private sector. However, it is currently only available for the terrestrial realm. We extend the coverage of the threat abatement component of the STAR metric (START), used to identify locations where positive interventions could make a large contribution to reducing global species extinction risk and where developments that increase threats to species should be mitigated, to the marine realm for 1646 marine species. Reducing unsustainable fishing provides the greatest opportunity to lower species extinction risk, comprising 43{\%} of the marine START score. Three-quarters (75{\%}) of the global marine START score falls entirely outside the boundaries of protected areas and only 2.7{\%} falls within no-take protected areas. The STAR metric can be used both to guide protected area expansion and to target other actions, such as establishment and enforcement of fishing limits, to recover biodiversity.}
 }
 @article{KEMPF2024,
 	title        = {A dataset to model {Levantine} landcover and land-use change connected to climate change, the {Arab Spring} and {COVID-19}},
@@ -269,11 +122,29 @@
 	issn         = {2352-3409},
 	url          = {https://www.sciencedirect.com/science/article/pii/S2352340924001690},
 	keywords     = {Built-up change, Climate change, Migration, Land degradation, Drought, Jordan},
-	abstract     = {The Levant is highly vulnerable to climate change and experiences prolonged heat waves that have led to societal crises and population displacement. In addition, the region has been impacted by further socio-political turmoil at least since 2010, including the Syrian civil war and currently the escalation of the so-called Israeli-Palestinian Conflict, which strained neighbouring countries like Jordan due to the influx of Syrian refugees and increases population vulnerability to governmental decision-making. Jordan, in particular, has seen rapid population growth and significant changes in land-use and infrastructure, leading to over-exploitation of the landscape through irrigation and unregulated construction activity. This article uses climate data, satellite imagery, and land cover information in a multicomponent trend analysis to illustrate the substantial increase in construction activity and to highlight the intricate relationship between climate change predictions and current socio-political development in the Levant. The analyses were performed using annual and seasonal composites of MODIS (Moderate Resolution Imaging Spectroradiometer) NDVI (Normalized Difference Vegetation Index) datasets with a spatial resolution of 250 m compared to climate indices of the GLDAS (Global Land Data Assimilation System) Noah Land Surface Model L4 dataset for the period 2001-2023. Surface reflectance and climatic parameters were then evaluated on the basis of socio-cultural factors, such as population dynamics, governmental decision-making, water withdrawal regulations, and built-up change as a result of large-scale migration processes. All analyses were conducted using R-software and can be reproduced and replicated using the code and the data provided in this article and the repository.}
 }
-@misc{wenzler-meya2024raster,
-  author = {Wenzler-Meya, Moritz},
-  title = {Ecological Dynamics: Raster Operations},
-  url = {https://ecodynizw.github.io/posts/rastertemplate/},
-  year = {2024}
+@article{https://doi.org/10.1002/2688-8319.12315,
+	title        = {Active management is required to regenerate the Caledonian forest: Alladale as a case study},
+	author       = {Williams, Jake and Sandom, Christopher J. and Pettorelli, Nathalie},
+	year         = 2024,
+	journal      = {Ecological Solutions and Evidence},
+	volume       = 5,
+	number       = 1,
+	pages        = {e12315},
+	doi          = {https://doi.org/10.1002/2688-8319.12315},
+	url          = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1002/2688-8319.12315},
+	note         = {e12315 ESO-23-10-108.R1},
+	keywords     = {conservation decision-making, ecosystem restoration, herbivore, passive, reforestation, rewilding},
+	eprint       = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1002/2688-8319.12315},
+}
+@article{Marcantonio2024.02.07.579266,
+	title        = {The rasterdiv package for measuring diversity from space},
+	author       = {Matteo Marcantonio and Elisa Thouverau and Duccio Rocchini},
+	year         = 2024,
+	journal      = {bioRxiv},
+	publisher    = {Cold Spring Harbor Laboratory},
+	doi          = {10.1101/2024.02.07.579266},
+	url          = {https://www.biorxiv.org/content/early/2024/02/13/2024.02.07.579266},
+	elocation-id = {2024.02.07.579266},
+	eprint       = {https://www.biorxiv.org/content/early/2024/02/13/2024.02.07.579266.full.pdf}
 }
