--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -148,3 +148,14 @@
 	elocation-id = {2024.02.07.579266},
 	eprint       = {https://www.biorxiv.org/content/early/2024/02/13/2024.02.07.579266.full.pdf}
 }
+@article{lukovic2024,
+	title        = {Spatial and temporal variations of aridity-humidity indices in {Montenegro}},
+	author       = {Luković, Jelena, Dragan Burić, Jovan Mihajlović, and Milutin Pejović},
+	year         = 2024,
+	month        = {Mar},
+	day          = {04},
+	journal      = {Theoretical and Applied Climatology},
+	doi          = {10.1007/s00704-024-04893-y},
+	issn         = {1434-4483},
+	url          = {https://doi.org/10.1007/s00704-024-04893-y}
+}
