--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -150,7 +150,7 @@
 }
 @article{lukovic2024,
 	title        = {Spatial and temporal variations of aridity-humidity indices in {Montenegro}},
-	author       = {Luković, Jelena, Dragan Burić, Jovan Mihajlović, and Milutin Pejović},
+	author       = {Jelena Luković and Dragan Burić and Jovan Mihajlović and Milutin Pejović},
 	year         = 2024,
 	month        = {Mar},
 	day          = {04},
