--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -124,7 +124,7 @@
 	keywords     = {Built-up change, Climate change, Migration, Land degradation, Drought, Jordan},
 }
 @article{https://doi.org/10.1002/2688-8319.12315,
-	title        = {Active management is required to regenerate the Caledonian forest: Alladale as a case study},
+	title        = {Active management is required to regenerate the {Caledonian} forest: {Alladale} as a case study},
 	author       = {Williams, Jake and Sandom, Christopher J. and Pettorelli, Nathalie},
 	year         = 2024,
 	journal      = {Ecological Solutions and Evidence},
@@ -138,7 +138,7 @@
 	eprint       = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1002/2688-8319.12315},
 }
 @article{Marcantonio2024.02.07.579266,
-	title        = {The rasterdiv package for measuring diversity from space},
+	title        = {The {rasterdiv} package for measuring diversity from space},
 	author       = {Matteo Marcantonio and Elisa Thouverau and Duccio Rocchini},
 	year         = 2024,
 	journal      = {bioRxiv},
