--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -131,7 +131,7 @@
 	volume       = 5,
 	number       = 1,
 	pages        = {e12315},
-	doi          = {https://doi.org/10.1002/2688-8319.12315},
+	doi          = {10.1002/2688-8319.12315},
 	url          = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1002/2688-8319.12315},
 	note         = {e12315 ESO-23-10-108.R1},
 	keywords     = {conservation decision-making, ecosystem restoration, herbivore, passive, reforestation, rewilding},
