--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -103,7 +103,7 @@
 	year         = 2024,
 	month        = {jan},
 	day          = 23,
-	journal      = {{npj Ocean Sustainability}},
+	journal      = {{npj} {Ocean Sustainability}},
 	volume       = 3,
 	number       = 1,
 	pages        = 4,
