--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -159,3 +159,17 @@
 	issn         = {1434-4483},
 	url          = {https://doi.org/10.1007/s00704-024-04893-y}
 }
+@article{Poyhonen2024,
+	title        = {High Arctic "hotspots" for sperm whales ({Physeter macrocephalus}) off western and northern {Svalbard, Norway}, revealed by multi-year {Passive Acoustic Monitoring (PAM)}},
+	author       = {Pöyhönen, Viivi and Thomisch, Karolin and Kovacs, Kit M. and Lydersen, Christian and Ahonen, Heidi},
+	year         = 2024,
+	month        = {Mar},
+	day          = {09},
+	journal      = {Scientific Reports},
+	volume       = 14,
+	number       = 1,
+	pages        = 5825,
+	doi          = {10.1038/s41598-024-56287-9},
+	issn         = {2045-2322},
+	url          = {https://doi.org/10.1038/s41598-024-56287-9}
+}
