--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -9,7 +9,7 @@
 	number       = 7,
 	pages        = {1--29},
 	doi          = {10.1371/journal.pone.0286036},
-	url          = {https://doi.org/10.1371/journal.pone.0286036},
+	url          = {https://doi.org/10.1371/journal.pone.0286036}
 }
 @phdthesis{chavez_sonoran_2023,
 	title        = {Sonoran {Desert} {Ex} {Situ} {Conservation} {Gap} {Analysis}: {Charting} the {Path} {Toward} {Conservation}.},
@@ -109,7 +109,7 @@
 	pages        = 4,
 	doi          = {10.1038/s44183-023-00040-8},
 	issn         = {2731-426X},
-	url          = {https://doi.org/10.1038/s44183-023-00040-8},
+	url          = {https://doi.org/10.1038/s44183-023-00040-8}
 }
 @article{KEMPF2024,
 	title        = {A dataset to model {Levantine} landcover and land-use change connected to climate change, the {Arab Spring} and {COVID-19}},
@@ -121,7 +121,7 @@
 	doi          = {10.1016/j.dib.2024.110198},
 	issn         = {2352-3409},
 	url          = {https://www.sciencedirect.com/science/article/pii/S2352340924001690},
-	keywords     = {Built-up change, Climate change, Migration, Land degradation, Drought, Jordan},
+	keywords     = {Built-up change, Climate change, Migration, Land degradation, Drought, Jordan}
 }
 @article{https://doi.org/10.1002/2688-8319.12315,
 	title        = {Active management is required to regenerate the {Caledonian} forest: {Alladale} as a case study},
@@ -135,7 +135,7 @@
 	url          = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1002/2688-8319.12315},
 	note         = {e12315 ESO-23-10-108.R1},
 	keywords     = {conservation decision-making, ecosystem restoration, herbivore, passive, reforestation, rewilding},
-	eprint       = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1002/2688-8319.12315},
+	eprint       = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1002/2688-8319.12315}
 }
 @article{Marcantonio2024.02.07.579266,
 	title        = {The {rasterdiv} package for measuring diversity from space},
